--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@ Javascript projects can be done on the console screen. To open the console scree
       console.log(last_name);
       var fullname=first_name.concat(last_name);
       console.log(fullname);
-      var A = "10";
-      var B = "5";
+      var A = 10;
+      var B = 5;
       var sum= A + B;
       var difference= A - B;
       var product= A * B;
